<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:id="@+id/ll_contact"
    android:focusable="true"
    android:clickable="true"
    android:paddingLeft="8dp"
    android:paddingTop="4dp"
    android:paddingRight="8dp"
    android:paddingBottom="4dp">

    <ImageView
        android:id="@+id/img_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="center"
        app:tint="@color/colorPrimary"
        app:srcCompat="@drawable/vd_delete_36dp"
        android:contentDescription="@string/contact_delete" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/txt_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="left|center_vertical"
            android:maxLines="2"
            android:textSize="14dp"
            app:autoSizeMinTextSize="10dp"
            app:autoSizeStepGranularity="1dp"
            app:autoSizeTextType="uniform"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="@string/contact"/>

        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="left"
            android:maxLines="1"
            android:textSize="12dp"
            android:textColor="@color/darker_gray"
            app:autoSizeMinTextSize="10dp"
            app:autoSizeStepGranularity="1dp"
            app:autoSizeTextType="uniform"
            tools:text="@string/contact_phone_number"/>

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="left"
            android:maxLines="1"
            android:textSize="12dp"
            android:textColor="@color/darker_gray"
            app:autoSizeMinTextSize="10dp"
            app:autoSizeStepGranularity="1dp"
            app:autoSizeTextType="uniform"
            tools:text="@string/email"/>


    </LinearLayout>

</LinearLayout>
