<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_about"
        android:layout_alignParentTop="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/email"
            android:textColor="@color/darker_gray"
            android:textSize="15dp"
            />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@android:drawable/editbox_background_normal"
            android:gravity="top"
            android:maxLength="100"
            android:textColor="@android:color/black"
            android:textSize="17dp"
            android:inputType="textEmailAddress"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/password"
                    android:textColor="@color/darker_gray"
                    android:textSize="15dp"
                    />

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@android:drawable/editbox_background_normal"
                    android:gravity="top"
                    android:maxLength="100"
                    android:textColor="@android:color/black"
                    android:textSize="17dp"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/img_show_hide_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/round_outline_border"
                android:scaleType="fitCenter"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/vd_eye_off" />

            <ImageView
                android:id="@+id/img_forgotten_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:scaleType="fitCenter"
                android:background="@drawable/round_outline_border"
                app:srcCompat="@drawable/vd_question_mark" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_login"
            style="@style/PositiveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/btn_register"
            style="@style/AccentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:minHeight="36dp"
            android:text="@string/register"
            android:textSize="18dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Made by DjokaFioka"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="12dp"
        android:layout_alignParentBottom="true"
        />

    <ImageView
        android:id="@+id/img_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/menu_settings"
        android:layout_alignParentBottom="true"
        android:background="@drawable/round_outline_border"
        app:srcCompat="@drawable/vd_settings_24"
        app:tint="@color/colorPrimary"/>

</RelativeLayout>
